# DAT-TWS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DAT-TWS/include/: dat-tws.h
DAT-TWS/src/: dat-tws.cpp  test_dat-tws.cpp
DTACB/include/: dtacb.h
DTACB/src/: Test_dtacb.cpp  dtacb.cpp  dtacb_batch.cpp  dtacb_nizk.cpp
IhMA/include/: AtoSa.h  IhMA.h  SPSEQ.h
IhMA/src/: AtoSa.cpp  IhMA.cpp  SPSEQ.cpp  TestIhMA.cpp
NTAT/include/: ntat.h
NTAT/src/: ntat.cpp  test_ntat.cpp
common/include/: Serializer.h  Tools.h
common/src/: Serializer.cpp  Tools.cpp
network_simulation/: CMakeLists.txt
network_simulation/include/: issuer.h  regulator.h  user.h  verifier.h
network_simulation/scripts/: build_net.sh  config.env  run_issuers.sh  tc_bandwidth.sh  tc_latency.sh  tc_loss.sh  teardown.sh
network_simulation/src/: issuer.cpp  user.cpp  verifier.cpp
protocol_simulation/: CMakeLists.txt
protocol_simulation/include/: issuer.h  regulator.h  user.h  verifier.h
protocol_simulation/scripts/: config.env  run_issuers.sh  stop_issuers.sh  tc_bandwidth.sh  tc_clean.sh  tc_latency.sh  tc_loss.sh
protocol_simulation/src/: issuer.cpp  regulator.cpp  user.cpp  verifier.cpp
